# sfz_generator

./: README.md  preview.py  pyproject.toml  run
aur/: PKGBUILD
sfz_generator/: main.py  utils.py
sfz_generator/audio/: jack_client.py  player.py  preview.py  processing.py
sfz_generator/gui/: main_window.py
sfz_generator/gui/mixins/: controls.py  file_io.py  midi.py  playback.py  processing.py  sfz_output.py  waveform.py
sfz_generator/sfz/: generator.py  parser.py
sfz_generator/widgets/: envelope_widget.py  piano_widget.py  waveform_widget.py
